// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/layout/Centered.tsx > should render itself & its children - full height false 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="vertical"
    data-justify="center"
    data-padding="spacious"
    data-wrap="nowrap"
  >
    Test
  </div>
</div>
`;

exports[`renderer/components/layout/Centered.tsx > should render itself & its children - full height true 1`] = `
<div>
  <div
    class="h-screen prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="vertical"
    data-justify="center"
    data-padding="spacious"
    data-wrap="nowrap"
  >
    Test
  </div>
</div>
`;
